--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,11 +1,11 @@
-<footer id="footer mt-5" style="background-color:black ;color:#cda45e">
+<footer id="footer mt-5" style="color:#21618C">
 
   <div class="footer-top">
-    <div class="container jumbotron mt-5" style="background-color:black">
+    <div class="container jumbotron mt-5" style="background-color:aliceblue">
       <div class="row">
 
         <div class="col-lg-4 col-md-6 footer-contact">
-          <h3>TU NAAkS</h3>
+          <h3  style="color:darkblue;font-weight:bolder">TU NAAkS</h3>
           <p>
             HQ: Thapar Institute Of Engineering<br>
             & Technology<br>
@@ -18,18 +18,18 @@
           </div>
 
         <div class="col-lg-4 col-md-6 footer-links">
-          <h4>&nbsp;&nbsp;&nbsp;Useful Links</h4>
+          <h4  style="color:darkblue;font-weight:bolder">&nbsp;&nbsp;&nbsp;Useful Links</h4>
           <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="/info" style="color:#cda45e">Home</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#" style="color:#cda45e">About us</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#" style="color:#cda45e">Services</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#" style="color:#cda45e">Terms of service</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#" style="color:#cda45e">Privacy policy</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="/info" style="color:#21618C">Home</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="/aboutus" style="color:#21618C">About us & Our Services</a></li>
+        
+            <li><i class="bx bx-chevron-right"></i> <a href="/terms" style="color:#21618C">Terms of service</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="/privacy" style="color:#21618C">Privacy policy</a></li>
           </ul>
         </div>
 
         <div class="col-lg-4 col-md-6 footer-links">
-          <h4> &nbsp;&nbsp;&nbsp;Our Services</h4>
+          <h4 style="color:darkblue;font-weight:bolder">&nbsp;&nbsp;&nbsp;Upcoming Services</h4>
           <ul>
             <li><i class="bx bx-chevron-right"></i> Technical Support</li>
             <li><i class="bx bx-chevron-right"></i> Hassle free Appointments</li>
@@ -39,12 +39,12 @@
           </ul>
         </div>
 
-     
+      
 
       </div>
     </div>
   </div>
-<hr style="color:#cda45e; width:80% height:0px;border-width:1; background-color:#cda45e">
+<hr style="color:#21618C; width:80%; height:0px;border-width:1; ">
   <div class="container">
 
     <div class="mr-md-auto text-center" style="text-align: center;">
@@ -80,7 +80,7 @@
   <script src="../../assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="../../assets/vendor/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script> -->
   <!-- Template Main JS File -->
- -->
+ 
    <!-- <script src="assets/js/main.js"></script> -->
    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
