--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -47,7 +47,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Raleway:wght@200&family=Xanh+Mono&display=swap" rel="stylesheet">
 </head>
 
-<body style="background-color: #000;font-family: 'Josefin Sans', sans-serif;">
+<body style="font-family: 'Josefin Sans', sans-serif;">
 
  
 
@@ -55,9 +55,9 @@
   <div style="margin-bottom: 100px;">
 
     <!-- navbar start -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-dark">
-            <a class="navbar-brand" href="/info" style="color:#cda45e">
-              <i class="fas fa-stethoscope" style="font-size:20px;color:#cda45e"></i>&nbsp;TU NAAkS
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: aliceblue;">
+            <a class="navbar-brand" href="/info" style="color:#21618C">
+              <i class="fas fa-stethoscope" style="font-size:20px;color:#21618C"></i>&nbsp;TU NAAkS
         <img src="../../public/pic/full-logo-j.jpg" style="height: 20; width:10;">
       </a>
     
@@ -67,34 +67,34 @@
       </button>
 
       <div class="collapse navbar-collapse justify-content-sm-end " id="navbarSupportedContent">
-        <ul class="navbar-nav" style="color:#cda45e">
+        <ul class="navbar-nav" style="color:#21618C">
 
           <% if(!currentuser){ %>
-          <li class="nav-item" style="color:#cda45e">
-            <a class="nav-link  btn btn-link" href="/register" style="color:#cda45e"> <i class="fas fa-user-circle" style="font-size:20px;color:#cda45e"></i>&nbsp;Login/Register</a>
+          <li class="nav-item" style="color:#21618C">
+            <a class="nav-link  btn btn-link" href="/register" style="color:#21618C"> <i class="fas fa-user-circle" style="font-size:20px;color:#21618C"></i>&nbsp;Login/Register</a>
           </li>
           <!-- <li class="nav-item">
                 <a class="nav-link" href="/register">Sign Up</a>
             </li> -->
           <% } else { %>
-          <li class="nav-item" style="color:#cda45e">
-            <a class="nav-link  btn btn-link" href="#t" style="color:#cda45e">Signed In As <%= currentuser.displayName %> </a>
+          <li class="nav-item" style="color:#21618C">
+            <a class="nav-link  btn btn-link" href="#t" style="color:#21618C">Signed In As <%= currentuser.displayName %> </a>
           </li>
-          <li class="nav-item" style="color:#cda45e">
-            <a class="nav-link  btn btn-link" href="/logout" style="color:#cda45e">&nbsp;Logout</a>
+          <li class="nav-item" style="color:#21618C">
+            <a class="nav-link  btn btn-link" href="/logout" style="color:#21618C">&nbsp;Logout</a>
           </li>
           <% } %>
         </ul>
 
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link btn btn-link" href="/info" style="color:#cda45e"> <i class="fa fa-home" style="font-size:20px;color:#cda45e"></i>&nbsp;Home</a>
+            <a class="nav-link btn btn-link" href="/info" style="color:#21618C"> <i class="fa fa-home" style="font-size:20px;color:#21618C"></i>&nbsp;Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-link" href="#" style="color:#cda45e"><i class="fas fa-address-card" style="font-size:20px;color:#cda45e"></i>&nbsp;About</a>
+            <a class="nav-link btn btn-link" href="/aboutus" style="color:#21618C"><i class="fas fa-address-card" style="font-size:20px;color:#21618C"></i>&nbsp;About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-link" href="/campgrounds/collab" style="color:#cda45e">Join US! </a>
+            <a class="nav-link btn btn-link" href="/campgrounds/collab" style="color:#21618C">Join US! </a>
           </li>
         
         </ul>
@@ -102,7 +102,7 @@
 
           <% if(currentuser){ %>
             <li class="nav-item">
-              <a class="nav-link btn btn-link" href="/info" style="color:#cda45e"><i class="fa fa-user-md" style="font-size:20px;color:#cda45e"></i>&nbsp;Doctors</a>
+              <a class="nav-link btn btn-link" href="/info" style="color:#21618C"><i class="fa fa-user-md" style="font-size:20px;color:#21618C"></i>&nbsp; Find Youself a Doctor!</a>
             </li>
                    <% } else { %>
      
